--- a/about/index.html
+++ b/about/index.html
@@ -114,7 +114,7 @@
 <meta name="keywords" content="Java">
 <meta property="og:type" content="website">
 <meta property="og:title" content="About">
-<meta property="og:url" content="https://blog.longyubo.com/about/index.html">
+<meta property="og:url" content="https://blog.longyb.com/about/index.html">
 <meta property="og:site_name" content="LongYuBo&#39;s Blog">
 <meta property="og:description" content="后端Java码畜，现居杭州">
 <meta property="og:locale" content="zh-CN">
@@ -128,7 +128,7 @@
 
 
 
-  <link rel="canonical" href="https://blog.longyubo.com/about/"/>
+  <link rel="canonical" href="https://blog.longyb.com/about/"/>
 
 
 
@@ -633,7 +633,7 @@
   
     <script type="text/javascript">
       var disqus_config = function () {
-        this.page.url = 'https://blog.longyubo.com/about/index.html';
+        this.page.url = 'https://blog.longyb.com/about/index.html';
         this.page.identifier = 'about/index.html';
         this.page.title = 'About';
         };
