--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
     sidebar: "",
   };
 </script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9632745329941208",
+    enable_page_level_ads: true
+  });
+</script>
 
   <title>LongYuBo's Blog</title>
   
