--- a/index.html
+++ b/index.html
@@ -2107,11 +2107,12 @@ Cassandra的主入口是CassandraDaemon这个类，通过activate启动，
       
 
 
-             <section class="post-toc-wrap motion-element sidebar-panel sidebar-panel-active"  style="margin-bottom:10px;margin-top:10px">
+        <!--     <section class="post-toc-wrap motion-element sidebar-panel sidebar-panel-active"  style="margin-bottom:10px;margin-top:10px">
           <div class="post-toc post-toc-content">
            <a href="https://s.click.taobao.com/0hCmP8w" target="_blank" ><img width="300px" src="https://sinacloud.net/longyb-myblog/tb/tb2019_618_blog_new.jpg" alt="领取618红包"></img> </a>
           </div>
-        </section>
+        </section> 
+        -->
 
        <section class="post-toc-wrap motion-element sidebar-panel sidebar-panel-active"  style="margin-bottom:10px;margin-top:10px">
           <div class="post-toc post-toc-content">
